# AgentProbe

./: .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
agentprobe/: __init__.py  assertions.py  cli.py  mock_llm.py  plugin.py  similarity.py  snapshot.py  storage.py
tests/: test_assertions.py  test_mock_llm.py  test_snapshot.py
