[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentprobe"
version = "0.1.0"
description = "Drop-in pytest plugin for regression-testing AI agents — snapshot baselines, semantic comparison, mock LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yufeng He", email = "40085740+he-yufeng@users.noreply.github.com" },
]
keywords = ["pytest", "testing", "ai", "agents", "llm", "snapshot", "regression", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.0"]
openai = ["openai>=1.0"]
all = ["sentence-transformers>=2.0", "openai>=1.0"]
dev = ["ruff>=0.4", "pytest>=7.0"]

[project.scripts]
agentprobe = "agentprobe.cli:main"

[project.entry-points.pytest11]
agentprobe = "agentprobe.plugin"

[project.urls]
Homepage = "https://github.com/he-yufeng/AgentProbe"
Repository = "https://github.com/he-yufeng/AgentProbe"

[tool.hatch.build.targets.wheel]
packages = ["agentprobe"]

[tool.ruff]
line-length = 100
target-version = "py310"
